practice-6-kubernetes-deployment/journal/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: journal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: journal.local
      http:
        paths:
          - path: /api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: journal-frontend
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fileserver
                port:
                  number: 80
